# HabitStory-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  scratch_pad.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/errors/: __init__.py  error_categories.py  forbidden_error.py  internal_error.py  not_found_error.py
app/api/routes/: __init__.py  api.py  auth.py  challenges.py  explore.py  page.py  profile.py  users.py
app/api/routes/dependencies/: __init__.py  query_params.py  user.py
app/api/routes/journal/: private_journal.py  public_journal.py
app/core/: __init__.py  config.py
app/core/log/: costum_logging.py  current_logger.py  dev_logging_config.json  pro_config_path.json
app/core/security/: __init__.py  auth.py  oauth2.py  utils.py
app/crud/: __init__.py  challenge.py  journal.py  page.py  piece.py  reward.py  story.py  user.py
app/db/: aerich.ini  models.py  settings.py
app/db/migrations/models/: 2_20210622200409_None.sql
app/schemas/: __init__.py  challenge.py  common_models.py  journal.py  mail.py  page.py  user.py
app/services/: mail.py  story.py  story_dist.py
app/utils/: journal.py
tests/: components.py
tests/async/: conftest.py  utils.py
tests/async/functional/: test_create_journal.py  test_update_journal.py
tests/async/unit/: test_storypiece.py  test_user.py
tests/functional/: test_private_journal.py  test_profile.py
tests/sync/: conftest.py
tests/sync/functional/: test_auth.py  test_private_journal.py  test_root.py
tests/unit/: test_orm_user.py
